Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z12.java
/*
 * @test /nodynamiccopyright/
 * @bug 4865660
 * @summary implement "metadata" (attribute interfaces and program annotations)
 * @author gafter
 *
 * @compile/fail/ref=Z12.out -XDrawDiagnostics  Z12.java
 */

@interface An {
    void a();
}
