Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z12.out
Z12.java:11:5: compiler.err.invalid.annotation.member.type
1 error
